Issue w/ flipcard background-visibility in Chrome

--- a/src/components/homepage/workItem.module.css
+++ b/src/components/homepage/workItem.module.css
@@ -43,6 +43,7 @@
     height: 100%;
     backface-visibility: hidden;
     border-radius: 2px;
+    z-index:5;
 }
 
 .flipcardback {
